ags (3.10.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing call to activate
	* added ags-fx-vst3 effect processor to developer's book
	* improved build

ags (3.10.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler error if VST3 not available
	* fixed AgsVst3Bridge and AgsLiveVst3Bridge input pad count and flags

ags (3.10.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsVst3Manager and AgsVst3Plugin
	* implemented VST3 C API additional allocation functions of structs and theirs setters
	* implemented ags-fx-vst3 recall
	* implemented AgsVst3Bridge and related
	* fixed VST3 C API *_get_iid() by calling _iid.toTUID() before return

ags (3.10.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved allow (null) as WASAPI device

ags (3.10.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved build
	* fixed compiler warnings in ags_sf2_synth_util.c, ags_sfz_synth_util.c and ags_solver_matrix.c

ags (3.10.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: stripped unneeded code from utility functions
	* fixed libags-vst3 compiler and linker errors

ags (3.10.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: stripped unneeded code from utility functions
	* implemented ags/vst3-capi/pluginterfaces

ags (3.10.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: stripped unneeded code from utility functions
	* TODO:JK: implemented ags/vst3-capi/pluginterfaces

ags (3.9.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing use of destination_stride and source_stride fields
	* refactored ags_linear_interpolate_util.c
	* refactored ags_hq_pitch_util.c
	* refactored ags_fluid_interpolate_4th_order_util.c
	* refactored ags_fluid_interpolate_7th_order_util.c
	* refactored ags_fluid_iir_filter_util.c

ags (3.9.6)
